--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ services:
 before_script:
   - composer install
   
-
+before_install:
+  - ssh-keygen -q -N "" -f ~/.ssh/google_compute_engine
 notifications:
   email: false
 script: phpunit --configuration phpunit.xml --coverage-text
